<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEFD5" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#FFEFD5" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="#FFEFD5" >

            <Button
                android:id="@+id/buttonUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="updateFriend"
                android:text="@string/update"
                android:textSize="15sp"
        		android:textStyle="bold|italic"
        		android:typeface="serif"
        		android:textColor="#00008B" >
            </Button>

            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="deleteFriend"
                android:text="@string/delete"
                android:textSize="15sp"
        		android:textStyle="bold|italic"
        		android:typeface="serif"
        		android:textColor="#00008B" >
            </Button>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fname"
            android:typeface="serif"
        	android:textStyle="bold"
        	android:textColor="#00008B" />

        <EditText
            android:id="@+id/editFName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:hint=""
            android:textColor="#FF6347" >

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fphone"
            android:typeface="serif"
        	android:textStyle="bold"
        	android:textColor="#00008B" />

        <EditText
            android:id="@+id/editFPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:hint=""
            android:textColor="#FF6347" >
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/farea"
            android:typeface="serif"
        	android:textStyle="bold"
        	android:textColor="#00008B" />
	
        <EditText
            android:id="@+id/editFArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=""
        	android:textColor="#FF6347" >
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fcity" 
            android:typeface="serif"
        	android:textStyle="bold"
        	android:textColor="#00008B"/>

        <EditText
            android:id="@+id/editFCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=""
            android:textColor="#FF6347" >
        </EditText>

    </LinearLayout>

</ScrollView>